--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -2,7 +2,7 @@
 # installed that includes CMake 3.14 or later. You should not increase this
 # version, as doing so will cause the plugin to fail to compile for some
 # customers of the plugin.
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 4.1.1)
 
 # Project-level configuration.
 set(PROJECT_NAME "kataglyphis_native_inference")
@@ -21,6 +21,9 @@ list(APPEND PLUGIN_SOURCES
   "kataglyphis_native_inference_plugin.cpp"
   "kataglyphis_native_inference_plugin.h"
 )
+
+set(RUST_FEATURES "TRUE")
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../native/KataglyphisCppInference ${CMAKE_CURRENT_BINARY_DIR}/native_build)
 
 # Define the plugin library target. Its name must not be changed (see comment
 # on PLUGIN_NAME above).
@@ -70,7 +73,7 @@ enable_testing()
 include(FetchContent)
 FetchContent_Declare(
   googletest
-  URL https://github.com/google/googletest/archive/release-1.11.0.zip
+  URL https://github.com/google/googletest/archive/9706f75b8f91c52a3840cf5d878a7f37ea10ef00.zip
 )
 # Prevent overriding the parent project's compiler/linker settings
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
