--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -21,6 +21,30 @@ list(APPEND PLUGIN_SOURCES
 set(RUST_FEATURES "TRUE")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../native/KataglyphisCppInference ${CMAKE_CURRENT_BINARY_DIR}/native_build)
 
+# --- Install KataglyphisCppInference together with this plugin ----------------
+# Only add install rules if the target actually exists (safety).
+if(TARGET KataglyphisCppInference)
+  # Install the library target (runtime, shared lib, static archive)
+  install(TARGETS KataglyphisCppInference
+    EXPORT KataglyphisCppInferenceTargets
+    RUNTIME DESTINATION bin        # executables on some platforms
+    LIBRARY DESTINATION lib        # shared libs
+    ARCHIVE DESTINATION lib        # static libs / import libs
+    INCLUDES DESTINATION include
+  )
+
+  # Install public headers (adjust path to actual headers if different)
+  # Assume headers live in the native project include/ or Src/include.
+  #install(DIRECTORY
+  #  ${CMAKE_CURRENT_SOURCE_DIR}/../native/KataglyphisCppInference/include
+  #  DESTINATION include/KataglyphisCppInference
+  #  FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
+  #  OPTIONAL
+  #)
+else()
+  message(WARNING "Target KataglyphisCppInference not found; skipping install rules.")
+endif()
+
 # Define the plugin library target. Its name must not be changed (see comment
 # on PLUGIN_NAME above).
 add_library(${PLUGIN_NAME} SHARED
