--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,12 +36,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_17
+        jvmTarget = JavaVersion.VERSION_21
     }
 
     sourceSets {
@@ -51,6 +51,8 @@ android {
 
     defaultConfig {
         minSdk = 24
+
+        consumerProguardFiles "consumer-rules.pro"
 
         externalNativeBuild {
             cmake {
